--- a/templates/doc.html
+++ b/templates/doc.html
@@ -5,9 +5,62 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container pt-4">
+    <div class="container py-4">
 
-        <h1 class="pb-2">ImageNet3D Annotation Collection</h1>
-    
+        <div class="row">
+
+            <div class="col-9 px-md-4">
+
+                <h1>Documentation</h1>
+
+                <h3 class="pb-2 pt-4">Quickstart</h3>
+
+                <p><b>Step 1.</b> Log in to the web app with your annotator ID.</p>
+
+                <img src="{{ url_for('static', filename='images/imagenet3d_login.png') }}" class="img-fluid" style="max-width: 50%">
+
+                <p><b>Step 2.</b> After logged in, you will be redirected to the account page where you will see the lists of tasks you are assigned to and the current annotation progress.</p>
+
+                <img src="{{ url_for('static', filename='images/imagenet3d_account.png') }}" class="img-fluid" style="max-width: 50%">
+
+                <p><b>Step 3.</b> Start annotating the data by clicking on any of the task names. Hovering on buttons or icons without texts will reveal text explanations.</p>
+
+                <img src="{{ url_for('static', filename='images/imagenet3d_annotate.png') }}" class="img-fluid" style="max-width: 50%">
+
+                <h3 class="pb-2 pt-4">Annotation Guidelines</h3>
+
+                <ul>
+
+                    <li><b>3D rotation.</b> Three parameters are used to specify the 3D rotation of an object: azimuth, elevation, and in-plane rotation. Adjust the three parameters so the 3D rotation of the rendered object aligns with the 3D rotation of the object in the image. Make sure you are not simply aligning the segmentation or boundaries of the two objects. You should focus on aligning the 3D rotation of the objects so the rendered object is "pointing" to the same direction as the object in the image.</li>
+
+                    <li><b>2D location.</b>2D location specifies the location of the center of the object.</li>
+
+                    <li><b>Distance.</b> Distance between the object and the camera. To annotate the distance, make sure the "size" of the rendered object is roughly the same as the "size" of the object in the image.</li>
+
+                    <li><b>Object quality.</b> Object quality specifies how clearly the object is visible from the image. Several choices are considered</li>
+
+                    <ul>
+                        <li><i>Good.</i> Most part (more than 90%) of the object is clearly visible in the image.</li>
+                        <li><i>Partially visible.</i> A small part of the object is occluded by other objects or outside the image (truncated by image boundary).</li>
+                        <li><i>Barely visible.</i> only a small part of the object is clearly visible -- the other parts are either occluded or outside the image.</li>
+                        <li><i>Bad quality / no object.</i> Most part of the object is occluded or outside the image; or the pose of the object is hard to tell.</li>
+                    </ul>
+
+                    <li><b>Dense scene.</b> The parameter tells if an object is very close to another object from the same category. Here "close" is defined in the 2D image plane -- two objects are close if the distance between them is small in the 2D image plane.</li>
+
+                    <ul>
+                        <li><i>Not dense scene.</i> The object is not close to another object from the same category. There can be multiple objects from the same category in one image but the objects are far away from each other.
+                        <li><i>Dense scene.</i> The object is very close to another object from the same category. They may occlude each other or simply very close to each other.</li>
+                    </ul>
+
+                </ul>
+
+            </div>
+
+            <div class="col-9 px-md-4">
+            </div>
+
+        </div>
+
     </div>
 {% endblock %}
