--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="shortcut icon" href="{{ url_for('static', filename='images/jhu-icon.png') }}">
+    <link rel="icon" href="{{ url_for('static', filename='images/jhu-icon.png') }}">
 
     <style>
     .slidercontainer {
@@ -61,8 +62,11 @@
                     <!-- <li class="nav-item">
                         <a class="nav-link" href="#"><i class="bi bi-house"></i> Prolific</a>
                     </li> -->
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="https://wufei-wiki.readthedocs.io/en/latest/imagenet3d.html"><i class="bi bi-file-earmark"></i> Documentation</a>
+                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('doc') }}"><i class="bi bi-file-earmark"></i> Documentation</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('account') }}"><i class="bi bi-person-circle"></i> Account</a>
