--- a/templates/index.html
+++ b/templates/index.html
@@ -291,7 +291,7 @@
                                 {% else %}
                                     <input class="form-check-input" type="radio" name="radio_dense" id="dense_no">
                                 {% endif %}
-                                <label class="form-check-label" for="radio_dense_no">Not dense scene</label>
+                                <label class="form-check-label" for="dense_no">Not dense scene</label>
                             </div>
                             <div class="form-check">
                                 {% if dense == 'dense_yes' %}
@@ -299,7 +299,7 @@
                                 {% else %}
                                     <input class="form-check-input" type="radio" name="radio_dense" id="dense_yes">
                                 {% endif %}
-                                <label class="form-check-label" for="radio_dense_yes">Dense scene</label>
+                                <label class="form-check-label" for="dense_yes">Dense scene</label>
                             </div>
                         </div>
                     </div>
@@ -431,6 +431,12 @@
                     url = `/annotate?task=${document.getElementById('task_id').textContent}&q_idx=${input.value}`;
                     window.location = url;
                 };
+            });
+            document.body.addEventListener("keydown", function(event) {
+                if (event.key == 'Enter') {
+                    event.preventDefault();
+                    document.getElementById('save_button').click();
+                }
             });
         });
     </script>
