--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
 
         <h1 class="pb-2">ImageNet3D Annotation Collection</h1>
 
-        <div class="container">
+        <div class="container" style="padding-left: 0px; padding-right: 0px;">
 
             {% if warning|length > 0 %}
                 <div class="alert alert-danger" role="alert">
