--- a/templates/unauthorized.html
+++ b/templates/unauthorized.html
@@ -9,7 +9,7 @@
 
         <h1 class="pb-2">ImageNet3D Annotation Collection</h1>
 
-        <div class="container">
+        <div class="container" style="padding-left: 0px; padding-right: 0px;">
 
             <p>
                 <span class="text-danger"><i class="bi bi-person-fill-dash"></i></span> Unauthorized annotator. Please <a href="{{ url_for('login') }}">log in</a> first.
