--- a/templates/doc.html
+++ b/templates/doc.html
@@ -30,7 +30,7 @@
             </p>
 
             <p>
-                <b>Before you start, it is very important for you to go over this <a href="https://drive.google.com/file/d/1BiQ4CoYbhABI5S2oC0M7IGqqvUmosnmu/view?usp=sharing">tutorial</a> with qualitative examples demonstrating many important details. The first part of the tutorial is similar to this documentation and the second part of the tutorial provides a lot of qualitative examples. Make sure you go over at least a number of the examples in part two to make sure you fully grasp the idea.</b>
+                <b><span style="color: red">Read me &#8592; </span> Before you start, it is very important for you to go over this <a href="https://drive.google.com/file/d/1BiQ4CoYbhABI5S2oC0M7IGqqvUmosnmu/view?usp=sharing">tutorial</a> with qualitative examples demonstrating many important details. The first part of the tutorial is similar to this documentation and the second part of the tutorial provides a lot of qualitative examples. Make sure you go over a number of the examples in part two to make sure you fully grasp the idea.</b>
             </p>
 
             <img src="{{ url_for('static', filename='images/imagenet3d_viewpoint.png') }}" class="img-fluid pb-2" style="max-width: 50%">
@@ -39,7 +39,7 @@
 
             <p>Log in to the web app with your annotator ID. You will see the list of tasks assigned to you and track your progress in this page.</p>
 
-            <img src="{{ url_for('static', filename='images/ui_login.png') }}" class="img-fluid" style="max-width: 30%">
+            <img src="{{ url_for('static', filename='images/ui_login.png') }}" class="img-fluid" style="max-width: 50%; padding-bottom: 20px;">
 
             <p>
                 Clicking on a task will redirect you to the first unannotated question. On the top you will see basic information about this question, as well as multiple control buttons. Hovering on the buttons will show you what they do.
@@ -50,15 +50,15 @@
                 </ul>
             </p>
 
-            <img src="{{ url_for('static', filename='images/ui_annotate.png') }}" class="img-fluid" style="max-width: 30%">
+            <img src="{{ url_for('static', filename='images/ui_annotate.png') }}" class="img-fluid" style="max-width: 50%; padding-bottom: 20px;">
 
             <p>The list of different CAD models are visualized on the bottom. Besides the 6D pose and type of model, you will also answer two questions on object quality and scene density.</p>
 
-            <img src="{{ url_for('static', filename='images/ui_cads.png') }}" class="img-fluid" style="max-width: 30%">
+            <img src="{{ url_for('static', filename='images/ui_cads.png') }}" class="img-fluid" style="max-width: 50%; padding-bottom: 20px;">
 
             <p>After labeling all information, clicking the green save button or pushing "Enter" key to save the annotation. If successful, you will see a message and the question status will be lighted.</p>
 
-            <img src="{{ url_for('static', filename='images/ui_save.png') }}" class="img-fluid" style="max-width: 30%">
+            <img src="{{ url_for('static', filename='images/ui_save.png') }}" class="img-fluid" style="max-width: 50%; padding-bottom: 20px;">
 
             <h3 class="pb-2 pt-4">Guidelines</h3>
 
@@ -97,6 +97,8 @@
             </p>
 
             <h3 class="pb-2 pt-4">Examples</h3>
+
+            <p>See <a href="https://drive.google.com/file/d/1BiQ4CoYbhABI5S2oC0M7IGqqvUmosnmu/view?usp=sharing">tutorial</a>.</p>
 
             <h2 class="pb-2">References</h2>
 
