--- a/templates/doc.html
+++ b/templates/doc.html
@@ -30,7 +30,7 @@
             </p>
 
             <p>
-                <b><span style="color: red">Read me &#9786; &#8594; </span> Before you start, it is very important for you to go over this <a href="https://drive.google.com/file/d/1BiQ4CoYbhABI5S2oC0M7IGqqvUmosnmu/view?usp=sharing">tutorial</a> with qualitative examples demonstrating many important details. The first part of the tutorial is similar to this documentation and the second part of the tutorial provides a lot of qualitative examples. Make sure you go over a number of the examples in part two to make sure you fully grasp the idea.</b>
+                <b><span style="color: red">Read me &#9786; &#8594; </span> Before you start, it is very important for you to go over this <a href="https://drive.google.com/file/d/1BiQ4CoYbhABI5S2oC0M7IGqqvUmosnmu/view?usp=sharing">tutorial</a> with qualitative examples demonstrating many important details. The first part of the tutorial is similar to this documentation and the second part of the tutorial provides a lot of qualitative images. Please go over a number of the examples in part two to make sure you fully grasp the idea.</b>
             </p>
 
             <img src="{{ url_for('static', filename='images/imagenet3d_viewpoint.png') }}" class="img-fluid pb-2" style="max-width: 50%">
